data/derived/comb/progs/unify/prog2956.ml.out
Characters 47-56:
  let stringOfList f l = List.map (fun a -> a l) sepConcat;;
                                                 ^^^^^^^^^
Error: This expression has type string -> string list -> string
       but an expression was expected of type ('a -> 'b) list
